2008-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-decode-string): Don't replace +'s with spaces.

2007-12-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-coding-system-accept-region-p): New function.
	(w3m-form-input-textarea-save, w3m-form-input-textarea-set): Use it.

2007-12-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-goto-session): Go to the current w3m
	buffer in data of session.

2007-12-24  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-session.el (w3m-session-history-to-save): New function.
	(w3m-session-save): Also record history data.
	(w3m-session-automatic-save, w3m-session-deleted-save): Ditto.
	(w3m-session-select): Follow the format change.
	(w3m-session-goto-session): Also restore history data.

2007-12-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-tabmenu.el (w3m-tab-menubar-force-update): New function.
	(top): Register `w3m-tab-menubar-force-update' to
	`w3m-display-functions'.

2007-12-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-lynx-like-map): Bind `w3m-move-unseen-buffer'.
	(w3m-info-like-map): Ditto.
	(w3m-buffer-unseen): New buffer local variable.
	(w3m-set-buffer-unseen): New function.
	(w3m-set-buffer-seen): Ditto.
	(w3m-move-unseen-buffer): Ditto.
	(w3m-remove-local-hook): Ditto.
	(w3m-goto-url): Set buffer to unseen.
	(w3m-select-buffer-generate-contents): Support `unseen'.

	* w3m-util.el (top): Add the variable definition of `w3m-buffer-unseen'
	to avoid byte-compile warnings.
	(w3m-unseen-buffer-p): New inline macro.

	* w3m-tabmenu.el (w3m-tab-menubar-make-items-1): Support `unseen'.

	* w3m-ems.el (w3m-remove-local-hook): New function.
	(w3m-tab-unselected-unseen): New face.
	(w3m-tab-line): Support `unseen'.

2007-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mode): Set show-trailing-whitespace to nil.

2007-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-default-background): New user option.